--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 }
 .nav {
     text-align: center;
-    /*background-color:rgb(15, 202, 140);*/
-    height: 34px;
+    background-color:rgb(39, 46, 44);
+    height: 36px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .nav > ul > li {
@@ -17,14 +17,21 @@
     list-style-type: none;
     padding: 10px;
     margin: 0px 10px;
-    background-color: rgb(15, 202, 140);
     cursor: pointer;
     line-height: 30px;
     height: 34px;
     position: relative;
+    color: dodgerblue;
+}
+ul > li > a {
+    text-decoration: none;
+    color: dodgerblue;
+}
+ul > li > a:hover {
+    color:white;
 }
 ul > li:hover {
-    background-color: darkcyan;
+    background-color: rgb(107, 122, 122);
     color: white;
     transition: all ease 500ms;
 }
@@ -35,21 +42,20 @@ ul > li:hover {
 }
 .nav > ul > li:hover > ul {
     display: block;
-    background-color:rgb(15, 202, 140) ;
+    background-color: black ;
     left: 0px;
     right: 0px;
     top: 100%;
 }
-.nav > ul > li > ul > li > ul{
+.nav > ul > li > ul > li > ul {
     display: none;
     list-style-type: none;
 }
-.nav > ul > li > ul > li:hover > ul{
+.nav > ul > li > ul > li:hover > ul {
     display: block;
     transition: all ease 500ms;
     position: absolute;
-    background-color:rgb(15, 202, 140) ;
+    background-color: black ;
     left: 100%;
     top: 50%;
-
 }
